--- a/solution.ipynb
+++ b/solution.ipynb
@@ -48,11 +48,9 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "# Load the dataset\n",
-    "file_path = 'auto-mpg.csv'  # Adjust the path as necessary\n",
+    "file_path = 'auto-mpg.csv',
     "df = pd.read_csv(file_path)\n",
     "\n",
-    "# Display the first few rows and data types\n",
     "df.head(), df.dtypes"
    ]
   },
@@ -89,7 +87,6 @@
     }
    ],
    "source": [
-    "# Check for missing values\n",
     "df.isnull().sum()"
    ]
   },
@@ -119,11 +116,9 @@
     }
    ],
    "source": [
-    "# Handle missing values in 'horsepower'\n",
     "df['horsepower'] = pd.to_numeric(df['horsepower'], errors='coerce')\n",
     "df['horsepower'].fillna(df['horsepower'].mean(), inplace=True)\n",
     "\n",
-    "# Verify no missing values\n",
     "df.isnull().sum()"
    ]
   },
@@ -155,7 +150,6 @@
     "\n",
     "train_df, test_df = train_test_split(df, test_size=0.25, random_state=42)\n",
     "\n",
-    "# Check the shapes of the split data\n",
     "train_df.shape, test_df.shape"
    ]
   },
@@ -163,7 +157,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Visualize the data"
+    "# Visualize the data
    ]
   },
   {
@@ -226,25 +220,21 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
-    "# Numeric columns\n",
     "numeric_cols = df.select_dtypes(include=['float64', 'int64']).columns.tolist()\n",
     "\n",
-    "# Exclude categorical columns\n",
     "numeric_cols.remove('origin')\n",
     "numeric_cols.remove('model year')\n",
     "numeric_cols.remove('cylinders')\n",
     "\n",
-    "# Plot histograms for numeric columns\n",
     "for col in numeric_cols:\n",
     "    plt.figure()\n",
     "    sns.histplot(train_df[col].dropna(), kde=True)\n",
     "    plt.title(col)\n",
     "    plt.show()\n",
     "\n",
-    "# Categorize the columns based on visualization\n",
-    "symmetric_cols = ['mpg', 'displacement', 'weight', 'acceleration']  # Example\n",
-    "skewed_cols = ['horsepower']  # Example\n",
-    "categorical_cols = ['cylinders', 'model year', 'origin', 'car name']  # Example"
+    "symmetric_cols = ['mpg', 'displacement', 'weight', 'acceleration'] ,
+    "skewed_cols = ['horsepower'] ,
+    "categorical_cols = ['cylinders', 'model year', 'origin', 'car name']"
    ]
   },
   {
@@ -277,40 +267,33 @@
     "from sklearn.preprocessing import StandardScaler, OneHotEncoder, FunctionTransformer\n",
     "import numpy as np\n",
     "\n",
-    "# Imputation and scaling for numeric symmetric columns\n",
     "numeric_symmetric_pipeline = Pipeline([\n",
     "    ('imputer', SimpleImputer(strategy='mean')),\n",
     "    ('scaler', StandardScaler())\n",
     "])\n",
     "\n",
-    "# Imputation, log transformation, and scaling for numeric skewed columns\n",
     "numeric_skewed_pipeline = Pipeline([\n",
     "    ('imputer', SimpleImputer(strategy='mean')),\n",
     "    ('log_transform', FunctionTransformer(np.log1p, validate=True)),\n",
     "    ('scaler', StandardScaler())\n",
     "])\n",
     "\n",
-    "# One hot encoding for categorical columns\n",
     "categorical_pipeline = Pipeline([\n",
     "    ('imputer', SimpleImputer(strategy='constant', fill_value='missing')),\n",
     "    ('onehot', OneHotEncoder(handle_unknown='ignore'))\n",
     "])\n",
     "\n",
-    "# Combine all pipelines into a single ColumnTransformer\n",
     "preprocessor = ColumnTransformer([\n",
     "    ('num_sym', numeric_symmetric_pipeline, symmetric_cols),\n",
     "    ('num_skew', numeric_skewed_pipeline, skewed_cols),\n",
     "    ('cat', categorical_pipeline, categorical_cols)\n",
     "])\n",
     "\n",
-    "# Train the pipeline on the training data\n",
     "preprocessor.fit(train_df)\n",
     "\n",
-    "# Transform the training data and testing data\n",
     "train_processed = preprocessor.transform(train_df)\n",
     "test_processed = preprocessor.transform(test_df)\n",
     "\n",
-    "# Print the shapes of the processed data\n",
     "train_processed.shape, test_processed.shape"
    ]
   }
